# hydrogels

./: Cg0.85.out  Cgel.out  Dgel.out  Dgel1.out  ProjectHome.md  clang-opt.sh  gcc-opt.sh  launch-proto.sh  makefile  rho_gel4p.out  rho_gel8p.out
benchs/: job  launch.sh
calculus/: conc.m  gel.m  hfront.gp  poro.m
fronts/agar/: result_time_s_length_mm_agarose_0_5p_I_0.5.rtf  result_time_s_length_mm_agarose_1p_I_0.5.rtf  result_time_s_length_mm_agarose_2p_I_0.5.rtf  result_time_s_length_mm_agarose_4p_I_0.5.rtf
fronts/gelatine/: result_time_s_length_mm_gelatine_1p_I_0.5.rtf  result_time_s_length_mm_gelatine_2p_I_0.5.rtf  result_time_s_length_mm_gelatine_4p_I_0.5.rtf
fronts/water/: 2012-10-27_diffusion_acide_analyse_m3_crop_stack1_green_average_space-time_v2.tif  Results_m3_position_pix_time_pix_2.txt  Results_m3_position_pix_time_pix_3.txt  dualFit.R
gelatine/: Cgel1.0000e-02.dat.fit  Cgel1.0000e-04.dat.fit  Cgel1.0000e-05.dat.fit  Cgel1.2589e-02.dat.fit  Cgel1.2589e-03.dat.fit  Cgel1.2589e-04.dat.fit  Cgel1.2589e-05.dat.fit  Cgel1.5849e-06.dat.fit  Cgel1.9953e-02.dat.fit  Cgel1.9953e-04.dat.fit  Cgel2.5119e-03.dat.fit  Cgel2.5119e-06.dat.fit  Cgel3.1623e-03.dat.fit  Cgel3.1623e-04.dat.fit  Cgel3.9811e-03.dat.fit  Cgel5.0119e-02.dat.fit  Cgel5.0119e-04.dat.fit  Cgel5.0119e-05.dat.fit  Cgel6.3096e-02.dat.fit  Cgel6.3096e-04.dat.fit  Cgel7.9433e-02.dat.fit  Cgel7.9433e-04.dat.fit  launch.sh
laponite/: makefile
laponite/data/: raw.txt  test_Label_Time_Pressure_Area_AreaRate_m1.rtf  test_Label_Time_Pressure_Area_AreaRate_m2.rtf
laponite/docs/: growth_v3.tex  growth_v4.tex  growth_v5.tex  growth_v6.tex  makefile
laponite/src/: CMakeLists.txt  extract.cpp  growth.cpp  intg.cpp  param.lua  probe1.cpp  probe2.cpp  probe3.cpp  simv1.cpp  simv2.cpp
pH_laponite/: data.gp
src/: CMakeLists.txt
src/approx/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  config.lua  main.cpp
src/bubble-growth/: CMakeLists.txt  probe.cpp
src/build_gelatine/: CMakeLists.txt  main.cpp
src/diff1d/: CMakeLists.txt  cell-utils.cpp  cell.cpp  cell.hpp  chemsys.hpp  config.lua  initializer.cpp  library.cpp  library.hpp  main.cpp  param.cpp  param.hpp  types.cpp  types.hpp  worker.cpp  worker.hpp  workspace.cpp  workspace.hpp
src/diff2d/: CMakeLists.txt  cell.hpp  chemsys.cpp  initializer.hpp  library.hpp  main.cpp  skin.lua  types.hpp  workspace.cpp  workspace.hpp
src/fitFront/: CMakeLists.txt
src/fit_exp_front/: main.cpp
src/fit_gel_front/: CMakeLists.txt  main.cpp
src/fit_gelatine/: main.cpp
src/gel1d/: CMakeLists.txt  config.lua  front.lua  main.cpp
src/ierfc/: CMakeLists.txt
src/pHCalc/: CMakeLists.txt  calc.fl  main.cpp  main.hpp
src/rdiff1d/: CMakeLists.txt  boum.lua  cell-front.cpp  cell.cpp  cell.hpp  chemsys.hpp  collection.cpp  collection.hpp  config.lua  gelatine.lua  geometry.lua  initializer.cpp  initializer.hpp  main.cpp  params.cpp  setup.lua  simple.lua
tracking_data/: test_3%_january2013_bubble10.txt  test_3%_january2013_bubble12.txt  test_3%_january2013_bubble18.txt  test_3%_january2013_bubble21.txt  test_3%_january2013_bubble22.txt  test_3%_january2013_bubble24.txt  test_3%_january2013_bubble25.txt  test_3%_january2013_bubble27.txt  test_3%_january2013_bubble28.txt  test_3%_january2013_bubble29.txt  test_3%_january2013_bubble3.txt  test_3%_january2013_bubble30.txt  test_3%_january2013_bubble31.txt  test_3%_january2013_bubble33.txt  test_3%_january2013_bubble35.txt  test_3%_january2013_bubble38.txt  test_3%_january2013_bubble39.txt  test_3%_january2013_bubble4.txt  test_3%_january2013_bubble42.txt  test_3%_january2013_bubble5.txt  test_3%_january2013_bubble7.txt  test_3%_january2013_bubble8.txt
trunk/: Cgel.out  Dgel.out  Dgel1.out  clang-opt.sh  fit-agar.sh  fit-gelatine.sh  icc-opt.sh  launch-proto.sh  pCgel.out  rho.out  rho_gel1p.out  rho_gel2p.out  test.gp
trunk/benchmarks/: launch.sh
trunk/calculus/: gel.m  poro.m
trunk/gelatine/: Cgel0.0000e+00.dat.fit  Cgel1.0000e-01.dat.fit  Cgel1.0000e-03.dat.fit  Cgel1.0000e-06.dat.fit  Cgel1.2589e-06.dat.fit  Cgel1.5849e-02.dat.fit  Cgel1.5849e-03.dat.fit  Cgel1.5849e-04.dat.fit  Cgel1.5849e-05.dat.fit  Cgel1.9953e-03.dat.fit  Cgel1.9953e-05.dat.fit  Cgel1.9953e-06.dat.fit  Cgel2.5119e-02.dat.fit  Cgel2.5119e-04.dat.fit  Cgel2.5119e-05.dat.fit  Cgel3.1623e-02.dat.fit  Cgel3.1623e-05.dat.fit  Cgel3.1623e-06.dat.fit  Cgel3.9811e-02.dat.fit  Cgel3.9811e-04.dat.fit  Cgel3.9811e-05.dat.fit  Cgel3.9811e-06.dat.fit  Cgel5.0119e-03.dat.fit  Cgel5.0119e-06.dat.fit  Cgel6.3096e-03.dat.fit  Cgel6.3096e-05.dat.fit  Cgel6.3096e-06.dat.fit  Cgel7.9433e-03.dat.fit  Cgel7.9433e-05.dat.fit  Cgel7.9433e-06.dat.fit  (+2 more)
trunk/src/: CMakeLists.txt
trunk/src/approx/: main.cpp
trunk/src/benchmark/: CMakeLists.txt  config.lua  main.cpp
trunk/src/bubble-growth/: CMakeLists.txt  growth.cpp  probe.cpp
trunk/src/build_gelatine/: main.cpp
trunk/src/diff1d/: CMakeLists.txt  cell.cpp  cell.hpp  config.lua  initializer.hpp  library.cpp  library.hpp  main.cpp  param.cpp  param.hpp  worker.cpp  worker.hpp  workspace.cpp  workspace.hpp
trunk/src/diff2d/: CMakeLists.txt  cell.cpp  cell.hpp  initializer.cpp  library.cpp  main.cpp  param.cpp  param.hpp  skin.lua  workspace.cpp  workspace.hpp
trunk/src/fitFront/: main.cpp
trunk/src/fit_exp_front/: CMakeLists.txt  main.cpp
trunk/src/fit_gel_front/: main.cpp
trunk/src/fit_gelatine/: CMakeLists.txt
trunk/src/gel1d/: CMakeLists.txt  config.lua  front.lua  main.cpp  ui.fl
trunk/src/ierfc/: ierfc.cpp
trunk/src/pHCalc/: CMakeLists.txt  main.cpp
trunk/src/rdiff1d/: CMakeLists.txt  boum.lua  cell-front.cpp  cell.cpp  cell.hpp  chemsys.cpp  collection.cpp  config.lua  gelatine.lua  geometry.lua  initializer.cpp  main.cpp  params.cpp  params.hpp  setup.lua  simple.lua
work/: ediff.tex
(+24 files in other folders)
