CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hydrogels)

SET(YROOT $ENV{HOME}/program/yocto4/sdk)
MESSAGE( STATUS "YROOT=${YROOT}")
INCLUDE( ${YROOT}/share/yocto/rules.cmake )
INCLUDE_DIRECTORIES( ${YROOT}/include )
LINK_DIRECTORIES(    ${YROOT}/lib     )

SET(CMAKE_OSX_SYSROOT /Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.6.sdk)

MESSAGE( STATUS "OSX_SYSROOT=${CMAKE_OSX_SYSROOT}" )
ADD_SUBDIRECTORY(gel1d)
ADD_SUBDIRECTORY(pHCalc)

