CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hydrogels)

IF(WIN32)
	SET(YROOT "E:/program/yocto4/sdk")
ELSE()
	SET(YROOT $ENV{HOME}/program/yocto4/sdk)
ENDIF()

MESSAGE( STATUS "YROOT=${YROOT}")
INCLUDE( ${YROOT}/share/yocto/rules.cmake )
INCLUDE_DIRECTORIES( ${YROOT}/include )
LINK_DIRECTORIES(    ${YROOT}/lib     )

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/../sdk)

#SET(CMAKE_OSX_SYSROOT /Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.6.sdk)

MESSAGE( STATUS "OSX_SYSROOT=${CMAKE_OSX_SYSROOT}" )
#ADD_SUBDIRECTORY(diff1d)
ADD_SUBDIRECTORY(pHCalc)
ADD_SUBDIRECTORY(fitFront)
ADD_SUBDIRECTORY(approx)
ADD_SUBDIRECTORY(benchmark)
#ADD_SUBDIRECTORY(diff2d)

