CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(laponite)

SET(YROOT "$ENV{HOME}/program/yocto4/sdk" )
MESSAGE( STATUS "YROOT=${YROOT}" )
INCLUDE(${YROOT}/share/yocto/rules.cmake)
INCLUDE_DIRECTORIES("${YROOT}/include")
LINK_DIRECTORIES("${YROOT}/lib")

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)

SET(probe probe3)

ADD_EXECUTABLE(${probe} ${probe}.cpp)
TARGET_LINK_YOCTO(${probe} mk)
INSTALL( TARGETS ${probe}  RUNTIME DESTINATION bin )

ADD_EXECUTABLE(extract extract.cpp)
TARGET_LINK_YOCTO(extract mk)
INSTALL( TARGETS extract RUNTIME DESTINATION bin )

ADD_EXECUTABLE(simv1 simv1.cpp param.lua)
TARGET_LINK_YOCTO(simv1 mk lua++ lua)
INSTALL( TARGETS simv1 RUNTIME DESTINATION bin )

#ADD_EXECUTABLE(intg intg.cpp)
#TARGET_LINK_YOCTO(intg mk)
#INSTALL( TARGETS intg RUNTIME DESTINATION bin )

ADD_EXECUTABLE(growth growth.cpp)
TARGET_LINK_YOCTO(growth mk)
INSTALL( TARGETS growth RUNTIME DESTINATION bin )

