CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(hydrogels)

SET(YROOT $ENV{HOME}/program/yocto4/sdk)
MESSAGE( STATUS "YROOT=${YROOT}")
INCLUDE( ${YROOT}/share/yocto/rules.cmake )
INCLUDE_DIRECTORIES( ${YROOT}/include )
LINK_DIRECTORIES(    ${YROOT}/lib     )

ADD_SUBDIRECTORY(gel1d)
ADD_SUBDIRECTORY(pHCalc)

